--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -1,13 +1,15 @@
 .gridOpened {
   display: grid;
-  grid-template-columns: 13% 87%;
+  grid-template-columns: 250px 1fr;
   grid-template-rows: 100%;
+  transition: all 0.5s ease;
 }
 
 .gridClosed {
   display: grid;
-  grid-template-columns: 4% 96%;
+  grid-template-columns: 78px 1fr;
   grid-template-rows: 100%;
+  transition: all 0.5s ease;
 }
 
 .flexContainer {
