--- a/src/styles/controls.module.css
+++ b/src/styles/controls.module.css
@@ -26,7 +26,7 @@
     width: 30%;
     justify-content: space-around;
 }
-i {
+.iconButton {
     display: flex;
     justify-content: center;
     font-size: 1.4rem;
