--- a/src/styles/logoDetails.module.css
+++ b/src/styles/logoDetails.module.css
@@ -19,6 +19,16 @@
     display: flex;
     width: 200px;
     opacity: 1;
+    transition: all 0.5s ease;
+}
+
+.logo {
+    color: #fff;
+    height: 60px;
+    min-width: 50px;
+    font-size: 28px;
+    text-align: center;
+    line-height: 60px;
 }
 
 .icon {
@@ -28,6 +38,7 @@
     font-size: 28px;
     text-align: center;
     line-height: 60px;
+    cursor: pointer;
   }
 
 .logoName {
