--- a/src/styles/logoDetails.module.css
+++ b/src/styles/logoDetails.module.css
@@ -44,7 +44,7 @@
 .logoName {
     height: auto;
     width: auto;
-    color: green;
+    color: #fff;
     font-size: 20px;
     font-weight: 600;
 }
