--- a/src/styles/sidebar.module.css
+++ b/src/styles/sidebar.module.css
@@ -1,7 +1,9 @@
 .sidebar {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background-color: #11101D;
     color: white;
-    padding: 6px 14px;
     transition: 500ms;
     position: relative;
 }
