--- a/src/styles/spinner.css
+++ b/src/styles/spinner.css
@@ -6,6 +6,19 @@
     transform: rotate(360deg);
   }
 }
+.spinner-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  border: none;
+  resize: none;
+  outline: none;
+  background: none;
+  font-size: 1.8rem;
+  max-height: 250px;
+  padding: 10px 15px;
+}
 .loading-spinner {
   width: 50px;
   height: 50px;
