--- a/src/components/translator/controls/controls.module.css
+++ b/src/components/translator/controls/controls.module.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     height: auto;
     padding: 1.3rem 1.5rem;
+    border-bottom: 1px solid lightgrey;
 }
 
 .fromGroup {
