--- a/src/components/translator/translator.module.css
+++ b/src/components/translator/translator.module.css
@@ -9,14 +9,14 @@
   padding: 30px;
 }
 .wrapper {
+  display: flex;
+  flex-direction: column;
   border: 1px solid lightgrey;
   border-radius: 7px;
 }
 .textinput {
-  height: 100%;
-  max-height: 250px;
   display: flex;
-  border-bottom: 1px solid lightgray;
+  max-height: max-content;
 }
 .textarea {
   width: 100%;
@@ -25,7 +25,6 @@
   outline: none;
   background: none;
   font-size: 1.8rem;
-  max-height: 250px;
   padding: 10px 15px;
 }
 .areaLeft {
