--- a/src/components/swapLanguagesBtn/swap.module.css
+++ b/src/components/swapLanguagesBtn/swap.module.css
@@ -1,7 +1,16 @@
+.swapBtnWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    flex-grow: 1;
+}
+
 .iconButton {
     display: flex;
-    justify-content: center;
     font-size: 1.4rem;
+    height: auto;
+    width: auto;
     cursor: pointer;
-    color: #9f9f9f;
+    color: white;
 }
