--- a/src/components/translator/spinner/spinner.css
+++ b/src/components/translator/spinner/spinner.css
@@ -7,21 +7,12 @@
   }
 }
 .spinner-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  border: none;
-  resize: none;
-  outline: none;
-  background: none;
   font-size: 1.8rem;
-  max-height: 250px;
-  padding: 10px 15px;
+  width:  100%;
 }
 .loading-spinner {
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   border: 10px solid #f3f3f3; /* Light grey */
   border-top: 10px solid #383636; /* Black */
   border-radius: 50%;
