--- a/src/components/translator/translator.module.css
+++ b/src/components/translator/translator.module.css
@@ -1,50 +1,26 @@
 .translator {
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color: #42004f;
   max-width: 690px;
   width: 100%;
   height: 370px;
-  border-radius: 7px;
-  padding: 30px;
+  border-radius: 15px;
+  padding: 15px 30px 30px 30px;
 }
 .wrapper {
   display: flex;
-  flex-direction: column;
-  border: 1px solid lightgrey;
+  flex-direction: row;
+  justify-content: space-between;
   border-radius: 7px;
 }
-.textinput {
-  display: flex;
-  max-height: max-content;
-}
-.textarea {
-  width: 100%;
-  border: none;
-  resize: none;
-  outline: none;
-  background: none;
-  font-size: 1.8rem;
-  padding: 10px 15px;
-}
-.areaLeft {
-  border-top-left-radius: 7px;
-  border-right: 1px solid lightgray;
-}
-.areaRight {
-  border-top-right-radius: 7px;
-}
 
-button {
-  height: auto;
-  width: 100%;
-  padding: 14px;
-  margin-top: 2rem;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  color: #fff;
-  font-size: 17px;
-  border-radius: 5px;
-  background-color: #5372f0;
+@media all and (max-width: 480px) {
+  .wrapper {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .translator {
+    padding: 20px 20px;
+  }
 }
