--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 *{
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
+  color: white;
   height: 100%;
 }
 
@@ -15,4 +16,8 @@
   height: 100%;
   padding: 0px;
   margin: 0px;
+}
+
+#krm_desktop_extension {
+  display: none;
 }
