--- a/src/components/translator/spinner/spinner.css
+++ b/src/components/translator/spinner/spinner.css
@@ -6,13 +6,21 @@
     transform: rotate(360deg);
   }
 }
+
 .spinner-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  resize: none;
+  outline: none;
+  background: none;
   font-size: 1.8rem;
-  width:  100%;
+  padding: 10px 15px;
 }
 .loading-spinner {
-  width: 100%;
-  height: 100%;
+  width: 50px;
+  height: 50px;
   border: 10px solid #f3f3f3; /* Light grey */
   border-top: 10px solid #383636; /* Black */
   border-radius: 50%;
