--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root, body {
+  background-color: #E4E9F7;
+  padding: 0px;
+  margin: 0px;
+  font-size: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+*{
+  box-sizing: border-box;
+  font-family: "Poppins" , sans-serif;
+  color: white;
+  height: 100%;
+}
+
+.root {
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+}
+
+#krm_desktop_extension {
+  display: none;
+}
+
+select {
+  border: none;
+  outline: none;
+  font-size: 18px;
+  background: none;
 }
