Made buttons bigger

--- a/src/components/translator/translatorSide/translatorBtns/actions.module.css
+++ b/src/components/translator/translatorSide/translatorBtns/actions.module.css
@@ -3,7 +3,7 @@
     padding-left: 5px;
     align-items: center;
     height: auto;
-    width: 20%;
+    gap: 9px;
     justify-content: space-between;
 
 }
@@ -11,7 +11,8 @@
 .iconButton {
     display: flex;
     justify-content: center;
-    font-size: 1.4rem;
+    font-size: 2.4rem;
+    padding: 1.2rem;
     cursor: pointer;
     color: white;
 }
