--- a/src/components/translator/translatorSide/swapLanguagesBtn/swap.module.css
+++ b/src/components/translator/translatorSide/swapLanguagesBtn/swap.module.css
@@ -8,7 +8,8 @@
 
 .iconButton {
     display: flex;
-    font-size: 1.4rem;
+    font-size: 2.4rem;
+    padding: 1.2rem;
     height: auto;
     width: auto;
     cursor: pointer;
