--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,16 @@ select {
   outline: none;
   font-size: 18px;
   background: none;
+  display: block;
+  max-width: 200px;
+  font-size: 2.4rem;
 }
 
+
+
+
 option {
+  display: flex;
   color: black;
+  font-size: 1.2rem;
 }
